fix(logo): 🐛 revert max-height causing weird distortion

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,7 +7,6 @@
 
 .logo {
     height: auto;
-    max-height: 20vh;
 }
 
 .social-icons {
